Updated unit tests for all services test classes